# wasm-bloat

./: Cargo.toml
fixtures/: build.sh  double.rs
src/: index_map.rs  main.rs  name_section.rs
tests/: tests.rs
