[package]
name = "wasm-bloat"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

[dev-dependencies]
cli_test_dir = "0.1"

[dependencies]
common_failures = "0.1"
env_logger = "0.5.0-rc.1"
failure = "0.1"
log = "0.4"
parity-wasm = "0.19"
rustc-demangle = "0.1"
structopt = "0.1"
structopt-derive = "0.1"
